# ai_todo_ht2

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  vercel.json
.claude/commands/: sp.adr.md  sp.analyze.md  sp.checklist.md  sp.clarify.md  sp.constitution.md  sp.implement.md  sp.plan.md  sp.specify.md  sp.tasks.md
.spec-kit/: config.yaml
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  render.yaml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: fa6858c90805_phase5_advanced_features.py
backend/api/: index.py
backend/app/: config.py  database.py  main.py
backend/app/agent/: __init__.py  runner.py
backend/app/dependencies/: auth.py
backend/app/mcp/: __init__.py  server.py  tools.py
backend/app/models/: __init__.py  conversation.py  message.py  tag.py  task.py  task_event.py  user.py
backend/app/routers/: __init__.py  chat.py  chatkit.py  tags.py  tasks.py  transcription.py
backend/app/schemas/: __init__.py  chat.py  tag.py  task.py  transcription.py
backend/app/services/: whisper.py
backend/tests/: conftest.py  test_auth.py  test_tasks.py
frontend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
helm/todo-chatbot/: .helmignore  Chart.yaml  values-dev.yaml  values.yaml
specs/: architecture.md  overview.md  phase2-architecture-plan.md  phase3-implementation-plan.md  phase4-implementation-plan.md
(+84 files in other folders)
